// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@gqfn/cli > cytoid-io json 1`] = `
"/* eslint-ignore */
import type { ScalarType, EnumType, InputObjectType, Input, Field, ObjectType } from '@gqfn/core/schema'

type Scalar_FileSize = ScalarType<'FileSize', unknown, unknown>
type Scalar_Date = ScalarType<'Date', unknown, unknown>
type Scalar_Long = ScalarType<'Long', unknown, unknown>
type Scalar_Object = ScalarType<'Object', unknown, unknown>
type Scalar_Int = ScalarType<'Int', number, number>
type Scalar_Float = ScalarType<'Float', number, number>
type Scalar_String = ScalarType<'String', string, string>
type Scalar_Boolean = ScalarType<'Boolean', boolean, boolean>
type Scalar_ID = ScalarType<'ID', string | number, string | number>

export type ResourceState =
  | 'PRIVATE'
  | 'PUBLIC'
  | 'UNLISTED'
type Enum_ResourceState = EnumType<'ResourceState', ResourceState, ResourceState>

export type QueryOrder =
  | 'ASC'
  | 'DESC'
type Enum_QueryOrder = EnumType<'QueryOrder', QueryOrder, QueryOrder>

export type LevelQuerySort =
  | 'CREATION_DATE'
  | 'MODIFICATION_DATE'
  | 'DURATION'
  | 'DOWNLOADS'
  | 'PLAYS'
  | 'RATING'
  | 'DIFFICULTY'
type Enum_LevelQuerySort = EnumType<'LevelQuerySort', LevelQuerySort, LevelQuerySort>

export type PostType =
  | 'POST'
  | 'PAGE'
  | 'EVENT'
type Enum_PostType = EnumType<'PostType', PostType, PostType>

export type GameplayMods =
  | 'FC'
  | 'AP'
  | 'FlipX'
  | 'FlipY'
  | 'FlipAll'
  | 'Fast'
  | 'Slow'
  | 'Hard'
  | 'ExHard'
  | 'HideScanline'
  | 'HideNotes'
type Enum_GameplayMods = EnumType<'GameplayMods', GameplayMods, GameplayMods>

export type RecordQuerySort =
  | 'Score'
  | 'Accuracy'
  | 'Date'
  | 'Rating'
  | 'RecentRating'
type Enum_RecordQuerySort = EnumType<'RecordQuerySort', RecordQuerySort, RecordQuerySort>

export type SearchLevelSortingStrategy =
  | 'CREATION_DATE'
  | 'MODIFICATION_DATE'
  | 'DURATION'
  | 'DOWNLOADS'
  | 'PLAYS'
  | 'RATING'
  | 'DIFFICULTY'
type Enum_SearchLevelSortingStrategy = EnumType<'SearchLevelSortingStrategy', SearchLevelSortingStrategy, SearchLevelSortingStrategy>

export type SearchLevelOrder =
  | 'ASC'
  | 'DESC'
type Enum_SearchLevelOrder = EnumType<'SearchLevelOrder', SearchLevelOrder, SearchLevelOrder>

export type Role =
  | 'MODERATOR'
  | 'ADMIN'
  | 'USER'
type Enum_Role = EnumType<'Role', Role, Role>

type Input_ResourceMetaInput = InputObjectType<'ResourceMetaInput', {
  name: Input<'String', Scalar_String>
  localized_name: Input<'String', Scalar_String>
  url: Input<'String', Scalar_String>
}>

type Input_CollectionMetaInput = InputObjectType<'CollectionMetaInput', {
  cover: Input<'ResourceMetaInput', Input_ResourceMetaInput>
}>

type Input_CollectionInput = InputObjectType<'CollectionInput', {
  uid: Input<'String', Scalar_String>
  coverPath: Input<'String', Scalar_String>
  title: Input<'String', Scalar_String>
  slogan: Input<'String', Scalar_String>
  description: Input<'String', Scalar_String>
  levelIds: Input<'[Int!]', undefined>
  tags: Input<'[String!]', undefined>
  state: Input<'ResourceState', Enum_ResourceState>
  metadata: Input<'CollectionMetaInput', Input_CollectionMetaInput>
}>

type Input_UpdateLevelInput = InputObjectType<'UpdateLevelInput', {
  state: Input<'ResourceState', Enum_ResourceState>
  tags: Input<'[String!]', undefined>
  description: Input<'String', Scalar_String>
  censored: Input<'String', Scalar_String>
  category: Input<'[String!]', undefined>
}>

type Input_PartialChartMetadata = InputObjectType<'PartialChartMetadata', {
  type: Input<'String!', Scalar_String>
  name: Input<'String', Scalar_String>
  difficulty: Input<'Int', Scalar_Int>
}>

type Input_PartialMetadata = InputObjectType<'PartialMetadata', {
  title: Input<'String', Scalar_String>
  title_localized: Input<'String', Scalar_String>
  artist: Input<'String', Scalar_String>
  artist_localized: Input<'String', Scalar_String>
  artist_source: Input<'String', Scalar_String>
  illustrator: Input<'String', Scalar_String>
  illustrator_source: Input<'String', Scalar_String>
  charter: Input<'String', Scalar_String>
  storyboarder: Input<'String', Scalar_String>
  charts: Input<'[PartialChartMetadata!]', undefined>
}>

type Input_PostMetaInput = InputObjectType<'PostMetaInput', {
  cover: Input<'ResourceMetaInput', Input_ResourceMetaInput>
}>

type Input_PostInput = InputObjectType<'PostInput', {
  type: Input<'PostType', Enum_PostType>
  uid: Input<'String', Scalar_String>
  title: Input<'String', Scalar_String>
  slogan: Input<'String', Scalar_String>
  content: Input<'String', Scalar_String>
  state: Input<'ResourceState', Enum_ResourceState>
  coverPath: Input<'String', Scalar_String>
  logoPath: Input<'String', Scalar_String>
  metadata: Input<'PostMetaInput', Input_PostMetaInput>
  startDate: Input<'Date', Scalar_Date>
  endDate: Input<'Date', Scalar_Date>
  locked: Input<'Boolean', Scalar_Boolean>
  levelId: Input<'Int', Scalar_Int>
  collectionId: Input<'ID', Scalar_ID>
}>

type Input_RecordQueryInput = InputObjectType<'RecordQueryInput', {
  chartId: Input<'Int', Scalar_Int>
  ownerId: Input<'ID', Scalar_ID>
  ownerUid: Input<'String', Scalar_String>
  startDate: Input<'Date', Scalar_Date>
  endDate: Input<'Date', Scalar_Date>
  best: Input<'Boolean', Scalar_Boolean>
  ranked: Input<'Boolean', Scalar_Boolean>
}>

type Input_ProfileInput = InputObjectType<'ProfileInput', {
  birthday: Input<'Date', Scalar_Date>
  bio: Input<'String', Scalar_String>
}>

type Type_Query = ObjectType<'Query', {
  discordOnlineCount: Field<'Int', Scalar_Int>
  recentTweet: Field<'String', Scalar_String>
  collectionsCount: Field<'Int!', Scalar_Int>
  collection: Field<'Collection', undefined, {
    id: Input<'ID', Scalar_ID>
    uid: Input<'String', Scalar_String>
  }>
  collections: Field<'[CollectionListing!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
    cursor: Input<'ID', Scalar_ID>
    ownerId: Input<'String', Scalar_String>
    ownerUid: Input<'String', Scalar_String>
  }>
  recentComments: Field<'[Comment!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
  }>
  level: Field<'Level', undefined, {
    uid: Input<'String!', Scalar_String>
  }>
  levels: Field<'[Level!]!', undefined, {
    order: Input<'QueryOrder', Enum_QueryOrder>
    page: Input<'Int', Scalar_Int>
    limit: Input<'Int', Scalar_Int>
    sort: Input<'LevelQuerySort', Enum_LevelQuerySort>
    category: Input<'String', Scalar_String>
  }>
  levelsCount: Field<'Int!', Scalar_Int, {
    category: Input<'String', Scalar_String>
  }>
  chart: Field<'Chart', undefined, {
    levelUid: Input<'String!', Scalar_String>
    chartType: Input<'String!', Scalar_String>
  }>
  getPosts: Field<'[Post!]!', undefined, {
    limit: Input<'Int!', Scalar_Int>
    all: Input<'Boolean', Scalar_Boolean>
    skip: Input<'Int', Scalar_Int>
  }>
  getActivePosts: Field<'[Post!]!', undefined, {
    limit: Input<'Int!', Scalar_Int>
    skip: Input<'Int', Scalar_Int>
  }>
  getPost: Field<'PostDetail', undefined, {
    uid: Input<'String!', Scalar_String>
  }>
  recentRecords: Field<'[Record!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
    ranked: Input<'Boolean', Scalar_Boolean>
  }>
  records: Field<'[Record!]!', undefined, {
    query: Input<'RecordQueryInput', Input_RecordQueryInput>
    page: Input<'Int', Scalar_Int>
    limit: Input<'Int', Scalar_Int>
    sort: Input<'RecordQuerySort', Enum_RecordQuerySort>
    order: Input<'QueryOrder', Enum_QueryOrder>
  }>
  recordsCount: Field<'Int!', Scalar_Int, {
    query: Input<'RecordQueryInput', Input_RecordQueryInput>
  }>
  record: Field<'Record', undefined, {
    id: Input<'Int!', Scalar_Int>
    chartId: Input<'Int!', Scalar_Int>
  }>
  searchLevels: Field<'[Level!]!', undefined, {
    search: Input<'String!', Scalar_String>
    start: Input<'Int', Scalar_Int>
    limit: Input<'Int', Scalar_Int>
    strategy: Input<'SearchLevelSortingStrategy', Enum_SearchLevelSortingStrategy>
    order: Input<'SearchLevelOrder', Enum_SearchLevelOrder>
  }>
  profile: Field<'Profile', undefined, {
    id: Input<'ID', Scalar_ID>
    uid: Input<'String', Scalar_String>
  }>
  user: Field<'User', undefined, {
    id: Input<'ID', Scalar_ID>
    uid: Input<'String', Scalar_String>
  }>
  my: Field<'My', undefined>
}>

type Type_Mutation = ObjectType<'Mutation', {
  updateCollection: Field<'CollectionUserListing', undefined, {
    id: Input<'ID!', Scalar_ID>
    input: Input<'CollectionInput!', Input_CollectionInput>
  }>
  createCollection: Field<'CollectionUserListing', undefined, {
    input: Input<'CollectionInput!', Input_CollectionInput>
  }>
  deleteCollection: Field<'CollectionUserListing', undefined, {
    id: Input<'ID!', Scalar_ID>
  }>
  evaluateEpic: Field<'String', Scalar_String, {
    id: Input<'String', Scalar_String>
  }>
  rateLevel: Field<'Rating!', undefined, {
    id: Input<'String!', Scalar_String>
    rating: Input<'Int', Scalar_Int>
  }>
  unpackLevelPackage: Field<'UserLevel', undefined, {
    token: Input<'String!', Scalar_String>
    replace: Input<'String', Scalar_String>
  }>
  editLevelMetadata: Field<'UserLevel', undefined, {
    id: Input<'String!', Scalar_String>
    metadata: Input<'PartialMetadata', Input_PartialMetadata>
  }>
  deleteLevel: Field<'Boolean', Scalar_Boolean, {
    id: Input<'ID!', Scalar_ID>
  }>
  updateLevel: Field<'Boolean', Scalar_Boolean, {
    id: Input<'ID!', Scalar_ID>
    input: Input<'UpdateLevelInput', Input_UpdateLevelInput>
  }>
  addToLibrary: Field<'Boolean', Scalar_Boolean, {
    levelId: Input<'Int!', Scalar_Int>
  }>
  removeFromLibrary: Field<'Boolean', Scalar_Boolean, {
    levelId: Input<'Int!', Scalar_Int>
  }>
  createPost: Field<'Post', undefined, {
    post: Input<'PostInput', Input_PostInput>
  }>
  updatePost: Field<'Post', undefined, {
    id: Input<'ID!', Scalar_ID>
    input: Input<'PostInput', Input_PostInput>
  }>
  deletePost: Field<'Post', undefined, {
    id: Input<'ID!', Scalar_ID>
  }>
  addEmail: Field<'Boolean', Scalar_Boolean, {
    email: Input<'String!', Scalar_String>
  }>
  sendVerificationEmail: Field<'Boolean', Scalar_Boolean, {
    email: Input<'String!', Scalar_String>
  }>
  makeEmailPrimary: Field<'Boolean', Scalar_Boolean, {
    email: Input<'String!', Scalar_String>
  }>
  deleteEmail: Field<'Boolean', Scalar_Boolean, {
    email: Input<'String!', Scalar_String>
  }>
  sendResetPasswordEmail: Field<'Boolean', Scalar_Boolean, {
    email: Input<'String!', Scalar_String>
  }>
  changePasswordWithToken: Field<'Boolean', Scalar_Boolean, {
    token: Input<'String!', Scalar_String>
    password: Input<'String!', Scalar_String>
  }>
  changePassword: Field<'Boolean', Scalar_Boolean, {
    oldPassword: Input<'String!', Scalar_String>
    newPassword: Input<'String!', Scalar_String>
  }>
  removeExternalAccount: Field<'Boolean', Scalar_Boolean, {
    provider: Input<'String!', Scalar_String>
  }>
  addExternalAccount: Field<'Boolean', Scalar_Boolean, {
    token: Input<'String!', Scalar_String>
  }>
  updateProfile: Field<'Boolean', Scalar_Boolean, {
    input: Input<'ProfileInput!', Input_ProfileInput>
  }>
  updateProfileHeader: Field<'Image', undefined, {
    path: Input<'String!', Scalar_String>
  }>
  setAvatar: Field<'Avatar', undefined, {
    path: Input<'String', Scalar_String>
  }>
  setUserActive: Field<'Boolean', Scalar_Boolean, {
    id: Input<'ID!', Scalar_ID>
    active: Input<'Boolean!', Scalar_Boolean>
  }>
  banUser: Field<'Boolean', Scalar_Boolean, {
    id: Input<'ID!', Scalar_ID>
    reason: Input<'String!', Scalar_String>
  }>
  grantUserBadge: Field<'Boolean', Scalar_Boolean, {
    id: Input<'ID!', Scalar_ID>
    badge: Input<'String!', Scalar_String>
  }>
}>

type Type_ResourceMetaProperty = ObjectType<'ResourceMetaProperty', {
  name: Field<'String', Scalar_String>
  localized_name: Field<'String', Scalar_String>
  url: Field<'String', Scalar_String>
}>

type Type_ResourceMeta = ObjectType<'ResourceMeta', {
  cover: Field<'ResourceMetaProperty', Type_ResourceMetaProperty>
}>

type Type_Badge = ObjectType<'Badge', {
  uid: Field<'String!', Scalar_String>
  title: Field<'String!', Scalar_String>
  description: Field<'String', Scalar_String>
  metadata: Field<'Object', Scalar_Object>
}>

type Type_Profile = ObjectType<'Profile', {
  badges: Field<'[Badge!]!', undefined>
  recentRecords: Field<'[UserRecord!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
    sort: Input<'RecordQuerySort', Enum_RecordQuerySort>
    order: Input<'QueryOrder', Enum_QueryOrder>
  }>
  bestRecords: Field<'[UserRecord!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
  }>
  id: Field<'ID!', Scalar_ID>
  user: Field<'User', undefined>
  birthday: Field<'Date', Scalar_Date>
  bio: Field<'String', Scalar_String>
  header: Field<'Image', undefined>
  rating: Field<'Float!', Scalar_Float>
  exp: Field<'ProfileExp!', undefined>
  grades: Field<'ProfileGrades!', undefined>
  activity: Field<'ProfileActivity!', undefined>
  timeseries: Field<'[ProfileTimeSeries!]!', undefined>
}>

type Type_User = ObjectType<'User', {
  collectionsCount: Field<'Int!', Scalar_Int>
  collections: Field<'[CollectionUserListing!]!', undefined, {
    first: Input<'Int', Scalar_Int>
  }>
  levelsCount: Field<'Int!', Scalar_Int, {
    category: Input<'String', Scalar_String>
  }>
  levels: Field<'[UserLevel!]!', undefined, {
    first: Input<'Int', Scalar_Int>
    category: Input<'String', Scalar_String>
    sort: Input<'LevelQuerySort', Enum_LevelQuerySort>
    order: Input<'QueryOrder', Enum_QueryOrder>
  }>
  id: Field<'ID!', Scalar_ID>
  uid: Field<'String', Scalar_String>
  name: Field<'String', Scalar_String>
  emails: Field<'[Email!]!', undefined>
  registrationDate: Field<'Date', Scalar_Date>
  role: Field<'Role!', Enum_Role>
  avatar: Field<'Avatar!', undefined>
  active: Field<'Boolean', Scalar_Boolean>
  lastSeen: Field<'Date', Scalar_Date>
  my: Field<'My', undefined>
}>

type Type_My = ObjectType<'My', {
  collections: Field<'[CollectionUserListing!]!', undefined>
  levels: Field<'[UserStudioLevel!]!', undefined, {
    start: Input<'Int', Scalar_Int>
    limit: Input<'Int', Scalar_Int>
  }>
  levelsCount: Field<'Int!', Scalar_Int>
  library: Field<'[Level!]!', undefined, {
    granted: Input<'Boolean', Scalar_Boolean>
  }>
  emails: Field<'[Email!]!', undefined>
  user: Field<'User', Type_User>
  externalAccountProviders: Field<'[String!]!', undefined>
}>

type Type_CollectionUserListing = ObjectType<'CollectionUserListing', {
  id: Field<'ID!', Scalar_ID>
  uid: Field<'String!', Scalar_String>
  cover: Field<'Image', undefined>
  title: Field<'String!', Scalar_String>
  slogan: Field<'String!', Scalar_String>
  description: Field<'String!', Scalar_String>
  levelCount: Field<'Int!', Scalar_Int>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  tags: Field<'[String!]!', undefined>
  state: Field<'ResourceState!', Enum_ResourceState>
  metadata: Field<'ResourceMeta!', Type_ResourceMeta>
}>

type Type_Collection = ObjectType<'Collection', {
  id: Field<'ID!', Scalar_ID>
  uid: Field<'String!', Scalar_String>
  cover: Field<'Image', undefined>
  title: Field<'String!', Scalar_String>
  slogan: Field<'String!', Scalar_String>
  description: Field<'String!', Scalar_String>
  owner: Field<'User', Type_User>
  levelCount: Field<'Int!', Scalar_Int>
  levels: Field<'[Level!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
  }>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  tags: Field<'[String!]!', undefined>
  state: Field<'ResourceState!', Enum_ResourceState>
  metadata: Field<'ResourceMeta!', Type_ResourceMeta>
}>

type Type_CollectionListing = ObjectType<'CollectionListing', {
  id: Field<'ID!', Scalar_ID>
  uid: Field<'String!', Scalar_String>
  cover: Field<'Image', undefined>
  title: Field<'String!', Scalar_String>
  slogan: Field<'String!', Scalar_String>
  description: Field<'String!', Scalar_String>
  owner: Field<'User', Type_User>
  levelCount: Field<'Int!', Scalar_Int>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  tags: Field<'[String!]!', undefined>
  state: Field<'ResourceState!', Enum_ResourceState>
  metadata: Field<'ResourceMeta!', Type_ResourceMeta>
}>

type Type_Comment = ObjectType<'Comment', {
  id: Field<'Int!', Scalar_Int>
  category: Field<'String!', Scalar_String>
  key: Field<'String!', Scalar_String>
  content: Field<'String!', Scalar_String>
  date: Field<'Date!', Scalar_Date>
  owner: Field<'User', Type_User>
  metadata: Field<'Object', Scalar_Object>
}>

type Type_File = ObjectType<'File', {
  path: Field<'String!', Scalar_String>
  creationDate: Field<'Date', Scalar_Date>
}>

type Type_Image = ObjectType<'Image', {
  original: Field<'String', Scalar_String>
  thumbnail: Field<'String', Scalar_String>
  cover: Field<'String', Scalar_String>
  stripe: Field<'String', Scalar_String>
  sized: Field<'String', Scalar_String, {
    height: Input<'Int', Scalar_Int>
    width: Input<'Int', Scalar_Int>
  }>
}>

type Type_Avatar = ObjectType<'Avatar', {
  original: Field<'String', Scalar_String>
  small: Field<'String', Scalar_String>
  large: Field<'String', Scalar_String>
  sized: Field<'String', Scalar_String, {
    size: Input<'Int', Scalar_Int>
  }>
}>

type Type_LevelMeta = ObjectType<'LevelMeta', {
  title_localized: Field<'String', Scalar_String>
  artist: Field<'ResourceMetaProperty', Type_ResourceMetaProperty>
  illustrator: Field<'ResourceMetaProperty', Type_ResourceMetaProperty>
  charter: Field<'ResourceMetaProperty', Type_ResourceMetaProperty>
  storyboarder: Field<'ResourceMetaProperty', Type_ResourceMetaProperty>
}>

type Type_LevelBundle = ObjectType<'LevelBundle', {
  music: Field<'String', Scalar_String>
  musicPreview: Field<'String', Scalar_String>
  backgroundImage: Field<'Image', Type_Image>
}>

type Type_Chart = ObjectType<'Chart', {
  id: Field<'Int!', Scalar_Int>
  name: Field<'String', Scalar_String>
  difficulty: Field<'Int!', Scalar_Int>
  type: Field<'String!', Scalar_String>
  notesCount: Field<'Int!', Scalar_Int>
  leaderboard: Field<'[LeaderboardRecord!]!', undefined, {
    start: Input<'Int!', Scalar_Int>
    limit: Input<'Int!', Scalar_Int>
  }>
  numPlayers: Field<'Int!', Scalar_Int>
}>

type Type_Rating = ObjectType<'Rating', {
  average: Field<'Float', Scalar_Float>
  total: Field<'Int!', Scalar_Int>
  rating: Field<'Float', Scalar_Float>
  distribution: Field<'[Int!]!', undefined>
}>

type Type_Level = ObjectType<'Level', {
  id: Field<'Int!', Scalar_Int>
  version: Field<'Int!', Scalar_Int>
  uid: Field<'String!', Scalar_String>
  title: Field<'String!', Scalar_String>
  metadata: Field<'LevelMeta!', Type_LevelMeta>
  duration: Field<'Float!', Scalar_Float>
  size: Field<'FileSize!', Scalar_FileSize>
  description: Field<'String!', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  censored: Field<'String', Scalar_String>
  tags: Field<'[String!]!', undefined>
  category: Field<'[String!]!', undefined>
  owner: Field<'User', Type_User>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  bundle: Field<'LevelBundle', Type_LevelBundle>
  charts: Field<'[Chart!]!', undefined>
  rating: Field<'Rating!', Type_Rating>
  owned: Field<'Boolean', Scalar_Boolean>
}>

type Type_UserLevel = ObjectType<'UserLevel', {
  id: Field<'Int!', Scalar_Int>
  version: Field<'Int!', Scalar_Int>
  uid: Field<'String!', Scalar_String>
  title: Field<'String!', Scalar_String>
  metadata: Field<'LevelMeta!', Type_LevelMeta>
  duration: Field<'Float!', Scalar_Float>
  size: Field<'FileSize!', Scalar_FileSize>
  description: Field<'String!', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  censored: Field<'String', Scalar_String>
  tags: Field<'[String!]!', undefined>
  category: Field<'[String!]!', undefined>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  bundle: Field<'LevelBundle', Type_LevelBundle>
  charts: Field<'[Chart!]!', undefined>
}>

type Type_UserStudioLevel = ObjectType<'UserStudioLevel', {
  id: Field<'Int!', Scalar_Int>
  version: Field<'Int!', Scalar_Int>
  uid: Field<'String!', Scalar_String>
  title: Field<'String!', Scalar_String>
  metadata: Field<'LevelMeta!', Type_LevelMeta>
  duration: Field<'Float!', Scalar_Float>
  size: Field<'FileSize!', Scalar_FileSize>
  description: Field<'String!', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  censored: Field<'String', Scalar_String>
  tags: Field<'[String!]!', undefined>
  category: Field<'[String!]!', undefined>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  bundle: Field<'LevelBundle', Type_LevelBundle>
  charts: Field<'[Chart!]!', undefined>
  downloadCount: Field<'Float', Scalar_Float>
  playCount: Field<'Float', Scalar_Float>
  avgRating: Field<'Float', Scalar_Float>
  ratingCount: Field<'Float', Scalar_Float>
}>

type Type_PostMeta = ObjectType<'PostMeta', {
  cover: Field<'ResourceMetaProperty', Type_ResourceMetaProperty>
}>

type Type_Post = ObjectType<'Post', {
  id: Field<'String!', Scalar_String>
  type: Field<'PostType!', Enum_PostType>
  uid: Field<'String!', Scalar_String>
  title: Field<'String', Scalar_String>
  slogan: Field<'String', Scalar_String>
  content: Field<'String', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  creationDate: Field<'Date', Scalar_Date>
  modificationDate: Field<'Date', Scalar_Date>
  startDate: Field<'Date', Scalar_Date>
  endDate: Field<'Date', Scalar_Date>
  cover: Field<'Image', Type_Image>
  logo: Field<'Image', Type_Image>
  metadata: Field<'PostMeta', Type_PostMeta>
  locked: Field<'Boolean', Scalar_Boolean>
}>

type Type_PostDetail = ObjectType<'PostDetail', {
  id: Field<'String!', Scalar_String>
  type: Field<'PostType!', Enum_PostType>
  uid: Field<'String!', Scalar_String>
  title: Field<'String', Scalar_String>
  slogan: Field<'String', Scalar_String>
  content: Field<'String', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  creationDate: Field<'Date', Scalar_Date>
  modificationDate: Field<'Date', Scalar_Date>
  startDate: Field<'Date', Scalar_Date>
  endDate: Field<'Date', Scalar_Date>
  cover: Field<'Image', Type_Image>
  logo: Field<'Image', Type_Image>
  metadata: Field<'PostMeta', Type_PostMeta>
  locked: Field<'Boolean', Scalar_Boolean>
  level: Field<'Level', Type_Level>
  collection: Field<'Collection', Type_Collection>
  epicId: Field<'String', Scalar_String>
}>

type Type_RecordDetails = ObjectType<'RecordDetails', {
  perfect: Field<'Int!', Scalar_Int>
  great: Field<'Int!', Scalar_Int>
  good: Field<'Int!', Scalar_Int>
  bad: Field<'Int!', Scalar_Int>
  miss: Field<'Int!', Scalar_Int>
  maxCombo: Field<'Int!', Scalar_Int>
}>

type Type_RecordLevel = ObjectType<'RecordLevel', {
  id: Field<'Int!', Scalar_Int>
  version: Field<'Int!', Scalar_Int>
  uid: Field<'String!', Scalar_String>
  title: Field<'String!', Scalar_String>
  metadata: Field<'LevelMeta!', Type_LevelMeta>
  duration: Field<'Float!', Scalar_Float>
  size: Field<'FileSize!', Scalar_FileSize>
  description: Field<'String!', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  censored: Field<'String', Scalar_String>
  tags: Field<'[String!]!', undefined>
  category: Field<'[String!]!', undefined>
  owner: Field<'User', Type_User>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  bundle: Field<'LevelBundle', Type_LevelBundle>
}>

type Type_RecordChart = ObjectType<'RecordChart', {
  id: Field<'Int!', Scalar_Int>
  name: Field<'String', Scalar_String>
  difficulty: Field<'Int!', Scalar_Int>
  type: Field<'String!', Scalar_String>
  notesCount: Field<'Int!', Scalar_Int>
  level: Field<'RecordLevel', Type_RecordLevel>
}>

type Type_Record = ObjectType<'Record', {
  id: Field<'Int!', Scalar_Int>
  date: Field<'Date!', Scalar_Date>
  owner: Field<'User', Type_User>
  chart: Field<'RecordChart', Type_RecordChart>
  score: Field<'Int!', Scalar_Int>
  accuracy: Field<'Float!', Scalar_Float>
  mods: Field<'[GameplayMods!]!', undefined>
  ranked: Field<'Boolean!', Scalar_Boolean>
  details: Field<'RecordDetails!', Type_RecordDetails>
  rating: Field<'Float!', Scalar_Float>
  recentRating: Field<'Float', Scalar_Float>
  rank: Field<'Int', Scalar_Int>
}>

type Type_LeaderboardRecord = ObjectType<'LeaderboardRecord', {
  id: Field<'Int!', Scalar_Int>
  date: Field<'Date!', Scalar_Date>
  owner: Field<'User', Type_User>
  score: Field<'Int!', Scalar_Int>
  accuracy: Field<'Float!', Scalar_Float>
  mods: Field<'[GameplayMods!]!', undefined>
  details: Field<'RecordDetails!', Type_RecordDetails>
}>

type Type_UserRecord = ObjectType<'UserRecord', {
  id: Field<'Int!', Scalar_Int>
  date: Field<'Date!', Scalar_Date>
  chart: Field<'RecordChart', Type_RecordChart>
  score: Field<'Int!', Scalar_Int>
  accuracy: Field<'Float!', Scalar_Float>
  mods: Field<'[GameplayMods!]!', undefined>
  ranked: Field<'Boolean!', Scalar_Boolean>
  details: Field<'RecordDetails!', Type_RecordDetails>
  rating: Field<'Float!', Scalar_Float>
  recentRating: Field<'Float', Scalar_Float>
}>

type Type_Email = ObjectType<'Email', {
  address: Field<'String!', Scalar_String>
  verified: Field<'Boolean!', Scalar_Boolean>
  primary: Field<'Boolean', Scalar_Boolean>
}>

type Type_ProfileExp = ObjectType<'ProfileExp', {
  basicExp: Field<'Int!', Scalar_Int>
  levelExp: Field<'Int!', Scalar_Int>
  totalExp: Field<'Int!', Scalar_Int>
  currentLevel: Field<'Int!', Scalar_Int>
  nextLevelExp: Field<'Int!', Scalar_Int>
  currentLevelExp: Field<'Int!', Scalar_Int>
}>

type Type_ProfileGrades = ObjectType<'ProfileGrades', {
  MAX: Field<'Int!', Scalar_Int>
  SS: Field<'Int!', Scalar_Int>
  S: Field<'Int!', Scalar_Int>
  A: Field<'Int!', Scalar_Int>
  B: Field<'Int!', Scalar_Int>
  C: Field<'Int!', Scalar_Int>
  D: Field<'Int!', Scalar_Int>
  F: Field<'Int!', Scalar_Int>
}>

type Type_ProfileActivity = ObjectType<'ProfileActivity', {
  totalRankedPlays: Field<'Long!', Scalar_Long>
  clearedNotes: Field<'Long!', Scalar_Long>
  maxCombo: Field<'Long!', Scalar_Long>
  averageRankedAccuracy: Field<'Float!', Scalar_Float>
  totalRankedScore: Field<'Long!', Scalar_Long>
  totalPlayTime: Field<'Float!', Scalar_Float>
}>

type Type_ProfileTimeSeries = ObjectType<'ProfileTimeSeries', {
  cumulativeRating: Field<'Float!', Scalar_Float>
  cumulativeAccuracy: Field<'Float!', Scalar_Float>
  week: Field<'Int!', Scalar_Int>
  year: Field<'Int!', Scalar_Int>
  accuracy: Field<'Float!', Scalar_Float>
  rating: Field<'Float!', Scalar_Float>
  count: Field<'Int!', Scalar_Int>
}>

export type Schema = DefineSchema<{
  FileSize: Scalar_FileSize
  Date: Scalar_Date
  Long: Scalar_Long
  Object: Scalar_Object
  Int: Scalar_Int
  Float: Scalar_Float
  String: Scalar_String
  Boolean: Scalar_Boolean
  ID: Scalar_ID
  ResourceState: Enum_ResourceState
  QueryOrder: Enum_QueryOrder
  LevelQuerySort: Enum_LevelQuerySort
  PostType: Enum_PostType
  GameplayMods: Enum_GameplayMods
  RecordQuerySort: Enum_RecordQuerySort
  SearchLevelSortingStrategy: Enum_SearchLevelSortingStrategy
  SearchLevelOrder: Enum_SearchLevelOrder
  Role: Enum_Role
  ResourceMetaInput: Input_ResourceMetaInput
  CollectionMetaInput: Input_CollectionMetaInput
  CollectionInput: Input_CollectionInput
  UpdateLevelInput: Input_UpdateLevelInput
  PartialChartMetadata: Input_PartialChartMetadata
  PartialMetadata: Input_PartialMetadata
  PostMetaInput: Input_PostMetaInput
  PostInput: Input_PostInput
  RecordQueryInput: Input_RecordQueryInput
  ProfileInput: Input_ProfileInput
  Query: Type_Query
  Mutation: Type_Mutation
  ResourceMetaProperty: Type_ResourceMetaProperty
  ResourceMeta: Type_ResourceMeta
  Badge: Type_Badge
  Profile: Type_Profile
  User: Type_User
  My: Type_My
  CollectionUserListing: Type_CollectionUserListing
  Collection: Type_Collection
  CollectionListing: Type_CollectionListing
  Comment: Type_Comment
  File: Type_File
  Image: Type_Image
  Avatar: Type_Avatar
  LevelMeta: Type_LevelMeta
  LevelBundle: Type_LevelBundle
  Chart: Type_Chart
  Rating: Type_Rating
  Level: Type_Level
  UserLevel: Type_UserLevel
  UserStudioLevel: Type_UserStudioLevel
  PostMeta: Type_PostMeta
  Post: Type_Post
  PostDetail: Type_PostDetail
  RecordDetails: Type_RecordDetails
  RecordLevel: Type_RecordLevel
  RecordChart: Type_RecordChart
  Record: Type_Record
  LeaderboardRecord: Type_LeaderboardRecord
  UserRecord: Type_UserRecord
  Email: Type_Email
  ProfileExp: Type_ProfileExp
  ProfileGrades: Type_ProfileGrades
  ProfileActivity: Type_ProfileActivity
  ProfileTimeSeries: Type_ProfileTimeSeries
}>

declare module '@gqfn/core/schema' {
  interface Schemas {
    'https://services.cytoid.io/graphql': Schema
  }
}
"
`;

exports[`@gqfn/cli > cytoid-io sdl 1`] = `
"/* eslint-ignore */
import type { ScalarType, EnumType, InputObjectType, Input, Field, ObjectType } from '@gqfn/core/schema'

type Scalar_Date = ScalarType<'Date', unknown, unknown>
type Scalar_FileSize = ScalarType<'FileSize', unknown, unknown>
type Scalar_Long = ScalarType<'Long', unknown, unknown>
type Scalar_Object = ScalarType<'Object', unknown, unknown>
type Scalar_Int = ScalarType<'Int', number, number>
type Scalar_Float = ScalarType<'Float', number, number>
type Scalar_String = ScalarType<'String', string, string>
type Scalar_Boolean = ScalarType<'Boolean', boolean, boolean>
type Scalar_ID = ScalarType<'ID', string | number, string | number>

export type GameplayMods =
  | 'FC'
  | 'AP'
  | 'FlipX'
  | 'FlipY'
  | 'FlipAll'
  | 'Fast'
  | 'Slow'
  | 'Hard'
  | 'ExHard'
  | 'HideScanline'
  | 'HideNotes'
type Enum_GameplayMods = EnumType<'GameplayMods', GameplayMods, GameplayMods>

export type LevelQuerySort =
  | 'CREATION_DATE'
  | 'MODIFICATION_DATE'
  | 'DURATION'
  | 'DOWNLOADS'
  | 'PLAYS'
  | 'RATING'
  | 'DIFFICULTY'
type Enum_LevelQuerySort = EnumType<'LevelQuerySort', LevelQuerySort, LevelQuerySort>

export type PostType =
  | 'POST'
  | 'PAGE'
  | 'EVENT'
type Enum_PostType = EnumType<'PostType', PostType, PostType>

export type QueryOrder =
  | 'ASC'
  | 'DESC'
type Enum_QueryOrder = EnumType<'QueryOrder', QueryOrder, QueryOrder>

export type RecordQuerySort =
  | 'Score'
  | 'Accuracy'
  | 'Date'
  | 'Rating'
  | 'RecentRating'
type Enum_RecordQuerySort = EnumType<'RecordQuerySort', RecordQuerySort, RecordQuerySort>

export type ResourceState =
  | 'PRIVATE'
  | 'PUBLIC'
  | 'UNLISTED'
type Enum_ResourceState = EnumType<'ResourceState', ResourceState, ResourceState>

export type Role =
  | 'MODERATOR'
  | 'ADMIN'
  | 'USER'
type Enum_Role = EnumType<'Role', Role, Role>

export type SearchLevelOrder =
  | 'ASC'
  | 'DESC'
type Enum_SearchLevelOrder = EnumType<'SearchLevelOrder', SearchLevelOrder, SearchLevelOrder>

export type SearchLevelSortingStrategy =
  | 'CREATION_DATE'
  | 'MODIFICATION_DATE'
  | 'DURATION'
  | 'DOWNLOADS'
  | 'PLAYS'
  | 'RATING'
  | 'DIFFICULTY'
type Enum_SearchLevelSortingStrategy = EnumType<'SearchLevelSortingStrategy', SearchLevelSortingStrategy, SearchLevelSortingStrategy>

type Input_CollectionInput = InputObjectType<'CollectionInput', {
  uid: Input<'String', Scalar_String>
  coverPath: Input<'String', Scalar_String>
  title: Input<'String', Scalar_String>
  slogan: Input<'String', Scalar_String>
  description: Input<'String', Scalar_String>
  levelIds: Input<'[Int!]', undefined>
  tags: Input<'[String!]', undefined>
  state: Input<'ResourceState', Enum_ResourceState>
  metadata: Input<'CollectionMetaInput', undefined>
}>

type Input_CollectionMetaInput = InputObjectType<'CollectionMetaInput', {
  cover: Input<'ResourceMetaInput', undefined>
}>

type Input_PartialChartMetadata = InputObjectType<'PartialChartMetadata', {
  type: Input<'String!', Scalar_String>
  name: Input<'String', Scalar_String>
  difficulty: Input<'Int', Scalar_Int>
}>

type Input_PartialMetadata = InputObjectType<'PartialMetadata', {
  title: Input<'String', Scalar_String>
  title_localized: Input<'String', Scalar_String>
  artist: Input<'String', Scalar_String>
  artist_localized: Input<'String', Scalar_String>
  artist_source: Input<'String', Scalar_String>
  illustrator: Input<'String', Scalar_String>
  illustrator_source: Input<'String', Scalar_String>
  charter: Input<'String', Scalar_String>
  storyboarder: Input<'String', Scalar_String>
  charts: Input<'[PartialChartMetadata!]', undefined>
}>

type Input_PostInput = InputObjectType<'PostInput', {
  type: Input<'PostType', Enum_PostType>
  uid: Input<'String', Scalar_String>
  title: Input<'String', Scalar_String>
  slogan: Input<'String', Scalar_String>
  content: Input<'String', Scalar_String>
  state: Input<'ResourceState', Enum_ResourceState>
  coverPath: Input<'String', Scalar_String>
  logoPath: Input<'String', Scalar_String>
  metadata: Input<'PostMetaInput', undefined>
  startDate: Input<'Date', Scalar_Date>
  endDate: Input<'Date', Scalar_Date>
  locked: Input<'Boolean', Scalar_Boolean>
  levelId: Input<'Int', Scalar_Int>
  collectionId: Input<'ID', Scalar_ID>
}>

type Input_PostMetaInput = InputObjectType<'PostMetaInput', {
  cover: Input<'ResourceMetaInput', undefined>
}>

type Input_ProfileInput = InputObjectType<'ProfileInput', {
  birthday: Input<'Date', Scalar_Date>
  bio: Input<'String', Scalar_String>
}>

type Input_RecordQueryInput = InputObjectType<'RecordQueryInput', {
  chartId: Input<'Int', Scalar_Int>
  ownerId: Input<'ID', Scalar_ID>
  ownerUid: Input<'String', Scalar_String>
  startDate: Input<'Date', Scalar_Date>
  endDate: Input<'Date', Scalar_Date>
  best: Input<'Boolean', Scalar_Boolean>
  ranked: Input<'Boolean', Scalar_Boolean>
}>

type Input_ResourceMetaInput = InputObjectType<'ResourceMetaInput', {
  name: Input<'String', Scalar_String>
  localized_name: Input<'String', Scalar_String>
  url: Input<'String', Scalar_String>
}>

type Input_UpdateLevelInput = InputObjectType<'UpdateLevelInput', {
  state: Input<'ResourceState', Enum_ResourceState>
  tags: Input<'[String!]', undefined>
  description: Input<'String', Scalar_String>
  censored: Input<'String', Scalar_String>
  category: Input<'[String!]', undefined>
}>

type Type_Avatar = ObjectType<'Avatar', {
  original: Field<'String', Scalar_String>
  small: Field<'String', Scalar_String>
  large: Field<'String', Scalar_String>
  sized: Field<'String', Scalar_String, {
    size: Input<'Int', Scalar_Int>
  }>
}>

type Type_Badge = ObjectType<'Badge', {
  uid: Field<'String!', Scalar_String>
  title: Field<'String!', Scalar_String>
  description: Field<'String', Scalar_String>
  metadata: Field<'Object', Scalar_Object>
}>

type Type_Chart = ObjectType<'Chart', {
  id: Field<'Int!', Scalar_Int>
  name: Field<'String', Scalar_String>
  difficulty: Field<'Int!', Scalar_Int>
  type: Field<'String!', Scalar_String>
  notesCount: Field<'Int!', Scalar_Int>
  leaderboard: Field<'[LeaderboardRecord!]!', undefined, {
    start: Input<'Int!', Scalar_Int>
    limit: Input<'Int!', Scalar_Int>
  }>
  numPlayers: Field<'Int!', Scalar_Int>
}>

type Type_Collection = ObjectType<'Collection', {
  id: Field<'ID!', Scalar_ID>
  uid: Field<'String!', Scalar_String>
  cover: Field<'Image', undefined>
  title: Field<'String!', Scalar_String>
  slogan: Field<'String!', Scalar_String>
  description: Field<'String!', Scalar_String>
  owner: Field<'User', undefined>
  levelCount: Field<'Int!', Scalar_Int>
  levels: Field<'[Level!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
  }>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  tags: Field<'[String!]!', undefined>
  state: Field<'ResourceState!', Enum_ResourceState>
  metadata: Field<'ResourceMeta!', undefined>
}>

type Type_CollectionListing = ObjectType<'CollectionListing', {
  id: Field<'ID!', Scalar_ID>
  uid: Field<'String!', Scalar_String>
  cover: Field<'Image', undefined>
  title: Field<'String!', Scalar_String>
  slogan: Field<'String!', Scalar_String>
  description: Field<'String!', Scalar_String>
  owner: Field<'User', undefined>
  levelCount: Field<'Int!', Scalar_Int>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  tags: Field<'[String!]!', undefined>
  state: Field<'ResourceState!', Enum_ResourceState>
  metadata: Field<'ResourceMeta!', undefined>
}>

type Type_CollectionUserListing = ObjectType<'CollectionUserListing', {
  id: Field<'ID!', Scalar_ID>
  uid: Field<'String!', Scalar_String>
  cover: Field<'Image', undefined>
  title: Field<'String!', Scalar_String>
  slogan: Field<'String!', Scalar_String>
  description: Field<'String!', Scalar_String>
  levelCount: Field<'Int!', Scalar_Int>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  tags: Field<'[String!]!', undefined>
  state: Field<'ResourceState!', Enum_ResourceState>
  metadata: Field<'ResourceMeta!', undefined>
}>

type Type_Comment = ObjectType<'Comment', {
  id: Field<'Int!', Scalar_Int>
  category: Field<'String!', Scalar_String>
  key: Field<'String!', Scalar_String>
  content: Field<'String!', Scalar_String>
  date: Field<'Date!', Scalar_Date>
  owner: Field<'User', undefined>
  metadata: Field<'Object', Scalar_Object>
}>

type Type_Email = ObjectType<'Email', {
  address: Field<'String!', Scalar_String>
  verified: Field<'Boolean!', Scalar_Boolean>
  primary: Field<'Boolean', Scalar_Boolean>
}>

type Type_File = ObjectType<'File', {
  path: Field<'String!', Scalar_String>
  creationDate: Field<'Date', Scalar_Date>
}>

type Type_Image = ObjectType<'Image', {
  original: Field<'String', Scalar_String>
  thumbnail: Field<'String', Scalar_String>
  cover: Field<'String', Scalar_String>
  stripe: Field<'String', Scalar_String>
  sized: Field<'String', Scalar_String, {
    height: Input<'Int', Scalar_Int>
    width: Input<'Int', Scalar_Int>
  }>
}>

type Type_LeaderboardRecord = ObjectType<'LeaderboardRecord', {
  id: Field<'Int!', Scalar_Int>
  date: Field<'Date!', Scalar_Date>
  owner: Field<'User', undefined>
  score: Field<'Int!', Scalar_Int>
  accuracy: Field<'Float!', Scalar_Float>
  mods: Field<'[GameplayMods!]!', undefined>
  details: Field<'RecordDetails!', undefined>
}>

type Type_Level = ObjectType<'Level', {
  id: Field<'Int!', Scalar_Int>
  version: Field<'Int!', Scalar_Int>
  uid: Field<'String!', Scalar_String>
  title: Field<'String!', Scalar_String>
  metadata: Field<'LevelMeta!', undefined>
  duration: Field<'Float!', Scalar_Float>
  size: Field<'FileSize!', Scalar_FileSize>
  description: Field<'String!', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  censored: Field<'String', Scalar_String>
  tags: Field<'[String!]!', undefined>
  category: Field<'[String!]!', undefined>
  owner: Field<'User', undefined>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  bundle: Field<'LevelBundle', undefined>
  charts: Field<'[Chart!]!', undefined>
  rating: Field<'Rating!', undefined>
  owned: Field<'Boolean', Scalar_Boolean>
}>

type Type_LevelBundle = ObjectType<'LevelBundle', {
  music: Field<'String', Scalar_String>
  musicPreview: Field<'String', Scalar_String>
  backgroundImage: Field<'Image', Type_Image>
}>

type Type_LevelMeta = ObjectType<'LevelMeta', {
  title_localized: Field<'String', Scalar_String>
  artist: Field<'ResourceMetaProperty', undefined>
  illustrator: Field<'ResourceMetaProperty', undefined>
  charter: Field<'ResourceMetaProperty', undefined>
  storyboarder: Field<'ResourceMetaProperty', undefined>
}>

type Type_Mutation = ObjectType<'Mutation', {
  updateCollection: Field<'CollectionUserListing', Type_CollectionUserListing, {
    id: Input<'ID!', Scalar_ID>
    input: Input<'CollectionInput!', Input_CollectionInput>
  }>
  createCollection: Field<'CollectionUserListing', Type_CollectionUserListing, {
    input: Input<'CollectionInput!', Input_CollectionInput>
  }>
  deleteCollection: Field<'CollectionUserListing', Type_CollectionUserListing, {
    id: Input<'ID!', Scalar_ID>
  }>
  evaluateEpic: Field<'String', Scalar_String, {
    id: Input<'String', Scalar_String>
  }>
  rateLevel: Field<'Rating!', undefined, {
    id: Input<'String!', Scalar_String>
    rating: Input<'Int', Scalar_Int>
  }>
  unpackLevelPackage: Field<'UserLevel', undefined, {
    token: Input<'String!', Scalar_String>
    replace: Input<'String', Scalar_String>
  }>
  editLevelMetadata: Field<'UserLevel', undefined, {
    id: Input<'String!', Scalar_String>
    metadata: Input<'PartialMetadata', Input_PartialMetadata>
  }>
  deleteLevel: Field<'Boolean', Scalar_Boolean, {
    id: Input<'ID!', Scalar_ID>
  }>
  updateLevel: Field<'Boolean', Scalar_Boolean, {
    id: Input<'ID!', Scalar_ID>
    input: Input<'UpdateLevelInput', Input_UpdateLevelInput>
  }>
  addToLibrary: Field<'Boolean', Scalar_Boolean, {
    levelId: Input<'Int!', Scalar_Int>
  }>
  removeFromLibrary: Field<'Boolean', Scalar_Boolean, {
    levelId: Input<'Int!', Scalar_Int>
  }>
  createPost: Field<'Post', undefined, {
    post: Input<'PostInput', Input_PostInput>
  }>
  updatePost: Field<'Post', undefined, {
    id: Input<'ID!', Scalar_ID>
    input: Input<'PostInput', Input_PostInput>
  }>
  deletePost: Field<'Post', undefined, {
    id: Input<'ID!', Scalar_ID>
  }>
  addEmail: Field<'Boolean', Scalar_Boolean, {
    email: Input<'String!', Scalar_String>
  }>
  sendVerificationEmail: Field<'Boolean', Scalar_Boolean, {
    email: Input<'String!', Scalar_String>
  }>
  makeEmailPrimary: Field<'Boolean', Scalar_Boolean, {
    email: Input<'String!', Scalar_String>
  }>
  deleteEmail: Field<'Boolean', Scalar_Boolean, {
    email: Input<'String!', Scalar_String>
  }>
  sendResetPasswordEmail: Field<'Boolean', Scalar_Boolean, {
    email: Input<'String!', Scalar_String>
  }>
  changePasswordWithToken: Field<'Boolean', Scalar_Boolean, {
    token: Input<'String!', Scalar_String>
    password: Input<'String!', Scalar_String>
  }>
  changePassword: Field<'Boolean', Scalar_Boolean, {
    oldPassword: Input<'String!', Scalar_String>
    newPassword: Input<'String!', Scalar_String>
  }>
  removeExternalAccount: Field<'Boolean', Scalar_Boolean, {
    provider: Input<'String!', Scalar_String>
  }>
  addExternalAccount: Field<'Boolean', Scalar_Boolean, {
    token: Input<'String!', Scalar_String>
  }>
  updateProfile: Field<'Boolean', Scalar_Boolean, {
    input: Input<'ProfileInput!', Input_ProfileInput>
  }>
  updateProfileHeader: Field<'Image', Type_Image, {
    path: Input<'String!', Scalar_String>
  }>
  setAvatar: Field<'Avatar', Type_Avatar, {
    path: Input<'String', Scalar_String>
  }>
  setUserActive: Field<'Boolean', Scalar_Boolean, {
    id: Input<'ID!', Scalar_ID>
    active: Input<'Boolean!', Scalar_Boolean>
  }>
  banUser: Field<'Boolean', Scalar_Boolean, {
    id: Input<'ID!', Scalar_ID>
    reason: Input<'String!', Scalar_String>
  }>
  grantUserBadge: Field<'Boolean', Scalar_Boolean, {
    id: Input<'ID!', Scalar_ID>
    badge: Input<'String!', Scalar_String>
  }>
}>

type Type_My = ObjectType<'My', {
  collections: Field<'[CollectionUserListing!]!', undefined>
  levels: Field<'[UserStudioLevel!]!', undefined, {
    start: Input<'Int', Scalar_Int>
    limit: Input<'Int', Scalar_Int>
  }>
  levelsCount: Field<'Int!', Scalar_Int>
  library: Field<'[Level!]!', undefined, {
    granted: Input<'Boolean', Scalar_Boolean>
  }>
  emails: Field<'[Email!]!', undefined>
  user: Field<'User', undefined>
  externalAccountProviders: Field<'[String!]!', undefined>
}>

type Type_Post = ObjectType<'Post', {
  id: Field<'String!', Scalar_String>
  type: Field<'PostType!', Enum_PostType>
  uid: Field<'String!', Scalar_String>
  title: Field<'String', Scalar_String>
  slogan: Field<'String', Scalar_String>
  content: Field<'String', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  creationDate: Field<'Date', Scalar_Date>
  modificationDate: Field<'Date', Scalar_Date>
  startDate: Field<'Date', Scalar_Date>
  endDate: Field<'Date', Scalar_Date>
  cover: Field<'Image', Type_Image>
  logo: Field<'Image', Type_Image>
  metadata: Field<'PostMeta', undefined>
  locked: Field<'Boolean', Scalar_Boolean>
}>

type Type_PostDetail = ObjectType<'PostDetail', {
  id: Field<'String!', Scalar_String>
  type: Field<'PostType!', Enum_PostType>
  uid: Field<'String!', Scalar_String>
  title: Field<'String', Scalar_String>
  slogan: Field<'String', Scalar_String>
  content: Field<'String', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  creationDate: Field<'Date', Scalar_Date>
  modificationDate: Field<'Date', Scalar_Date>
  startDate: Field<'Date', Scalar_Date>
  endDate: Field<'Date', Scalar_Date>
  cover: Field<'Image', Type_Image>
  logo: Field<'Image', Type_Image>
  metadata: Field<'PostMeta', undefined>
  locked: Field<'Boolean', Scalar_Boolean>
  level: Field<'Level', Type_Level>
  collection: Field<'Collection', Type_Collection>
  epicId: Field<'String', Scalar_String>
}>

type Type_PostMeta = ObjectType<'PostMeta', {
  cover: Field<'ResourceMetaProperty', undefined>
}>

type Type_Profile = ObjectType<'Profile', {
  badges: Field<'[Badge!]!', undefined>
  recentRecords: Field<'[UserRecord!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
    sort: Input<'RecordQuerySort', Enum_RecordQuerySort>
    order: Input<'QueryOrder', Enum_QueryOrder>
  }>
  bestRecords: Field<'[UserRecord!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
  }>
  id: Field<'ID!', Scalar_ID>
  user: Field<'User', undefined>
  birthday: Field<'Date', Scalar_Date>
  bio: Field<'String', Scalar_String>
  header: Field<'Image', Type_Image>
  rating: Field<'Float!', Scalar_Float>
  exp: Field<'ProfileExp!', undefined>
  grades: Field<'ProfileGrades!', undefined>
  activity: Field<'ProfileActivity!', undefined>
  timeseries: Field<'[ProfileTimeSeries!]!', undefined>
}>

type Type_ProfileActivity = ObjectType<'ProfileActivity', {
  totalRankedPlays: Field<'Long!', Scalar_Long>
  clearedNotes: Field<'Long!', Scalar_Long>
  maxCombo: Field<'Long!', Scalar_Long>
  averageRankedAccuracy: Field<'Float!', Scalar_Float>
  totalRankedScore: Field<'Long!', Scalar_Long>
  totalPlayTime: Field<'Float!', Scalar_Float>
}>

type Type_ProfileExp = ObjectType<'ProfileExp', {
  basicExp: Field<'Int!', Scalar_Int>
  levelExp: Field<'Int!', Scalar_Int>
  totalExp: Field<'Int!', Scalar_Int>
  currentLevel: Field<'Int!', Scalar_Int>
  nextLevelExp: Field<'Int!', Scalar_Int>
  currentLevelExp: Field<'Int!', Scalar_Int>
}>

type Type_ProfileGrades = ObjectType<'ProfileGrades', {
  MAX: Field<'Int!', Scalar_Int>
  SS: Field<'Int!', Scalar_Int>
  S: Field<'Int!', Scalar_Int>
  A: Field<'Int!', Scalar_Int>
  B: Field<'Int!', Scalar_Int>
  C: Field<'Int!', Scalar_Int>
  D: Field<'Int!', Scalar_Int>
  F: Field<'Int!', Scalar_Int>
}>

type Type_ProfileTimeSeries = ObjectType<'ProfileTimeSeries', {
  cumulativeRating: Field<'Float!', Scalar_Float>
  cumulativeAccuracy: Field<'Float!', Scalar_Float>
  week: Field<'Int!', Scalar_Int>
  year: Field<'Int!', Scalar_Int>
  accuracy: Field<'Float!', Scalar_Float>
  rating: Field<'Float!', Scalar_Float>
  count: Field<'Int!', Scalar_Int>
}>

type Type_Query = ObjectType<'Query', {
  discordOnlineCount: Field<'Int', Scalar_Int>
  recentTweet: Field<'String', Scalar_String>
  collectionsCount: Field<'Int!', Scalar_Int>
  collection: Field<'Collection', Type_Collection, {
    id: Input<'ID', Scalar_ID>
    uid: Input<'String', Scalar_String>
  }>
  collections: Field<'[CollectionListing!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
    cursor: Input<'ID', Scalar_ID>
    ownerId: Input<'String', Scalar_String>
    ownerUid: Input<'String', Scalar_String>
  }>
  recentComments: Field<'[Comment!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
  }>
  level: Field<'Level', Type_Level, {
    uid: Input<'String!', Scalar_String>
  }>
  levels: Field<'[Level!]!', undefined, {
    order: Input<'QueryOrder', Enum_QueryOrder>
    page: Input<'Int', Scalar_Int>
    limit: Input<'Int', Scalar_Int>
    sort: Input<'LevelQuerySort', Enum_LevelQuerySort>
    category: Input<'String', Scalar_String>
  }>
  levelsCount: Field<'Int!', Scalar_Int, {
    category: Input<'String', Scalar_String>
  }>
  chart: Field<'Chart', Type_Chart, {
    levelUid: Input<'String!', Scalar_String>
    chartType: Input<'String!', Scalar_String>
  }>
  getPosts: Field<'[Post!]!', undefined, {
    limit: Input<'Int!', Scalar_Int>
    all: Input<'Boolean', Scalar_Boolean>
    skip: Input<'Int', Scalar_Int>
  }>
  getActivePosts: Field<'[Post!]!', undefined, {
    limit: Input<'Int!', Scalar_Int>
    skip: Input<'Int', Scalar_Int>
  }>
  getPost: Field<'PostDetail', Type_PostDetail, {
    uid: Input<'String!', Scalar_String>
  }>
  recentRecords: Field<'[Record!]!', undefined, {
    limit: Input<'Int', Scalar_Int>
    ranked: Input<'Boolean', Scalar_Boolean>
  }>
  records: Field<'[Record!]!', undefined, {
    query: Input<'RecordQueryInput', Input_RecordQueryInput>
    page: Input<'Int', Scalar_Int>
    limit: Input<'Int', Scalar_Int>
    sort: Input<'RecordQuerySort', Enum_RecordQuerySort>
    order: Input<'QueryOrder', Enum_QueryOrder>
  }>
  recordsCount: Field<'Int!', Scalar_Int, {
    query: Input<'RecordQueryInput', Input_RecordQueryInput>
  }>
  record: Field<'Record', undefined, {
    id: Input<'Int!', Scalar_Int>
    chartId: Input<'Int!', Scalar_Int>
  }>
  searchLevels: Field<'[Level!]!', undefined, {
    search: Input<'String!', Scalar_String>
    start: Input<'Int', Scalar_Int>
    limit: Input<'Int', Scalar_Int>
    strategy: Input<'SearchLevelSortingStrategy', Enum_SearchLevelSortingStrategy>
    order: Input<'SearchLevelOrder', Enum_SearchLevelOrder>
  }>
  profile: Field<'Profile', Type_Profile, {
    id: Input<'ID', Scalar_ID>
    uid: Input<'String', Scalar_String>
  }>
  user: Field<'User', undefined, {
    id: Input<'ID', Scalar_ID>
    uid: Input<'String', Scalar_String>
  }>
  my: Field<'My', Type_My>
}>

type Type_Rating = ObjectType<'Rating', {
  average: Field<'Float', Scalar_Float>
  total: Field<'Int!', Scalar_Int>
  rating: Field<'Float', Scalar_Float>
  distribution: Field<'[Int!]!', undefined>
}>

type Type_Record = ObjectType<'Record', {
  id: Field<'Int!', Scalar_Int>
  date: Field<'Date!', Scalar_Date>
  owner: Field<'User', undefined>
  chart: Field<'RecordChart', undefined>
  score: Field<'Int!', Scalar_Int>
  accuracy: Field<'Float!', Scalar_Float>
  mods: Field<'[GameplayMods!]!', undefined>
  ranked: Field<'Boolean!', Scalar_Boolean>
  details: Field<'RecordDetails!', undefined>
  rating: Field<'Float!', Scalar_Float>
  recentRating: Field<'Float', Scalar_Float>
  rank: Field<'Int', Scalar_Int>
}>

type Type_RecordChart = ObjectType<'RecordChart', {
  id: Field<'Int!', Scalar_Int>
  name: Field<'String', Scalar_String>
  difficulty: Field<'Int!', Scalar_Int>
  type: Field<'String!', Scalar_String>
  notesCount: Field<'Int!', Scalar_Int>
  level: Field<'RecordLevel', undefined>
}>

type Type_RecordDetails = ObjectType<'RecordDetails', {
  perfect: Field<'Int!', Scalar_Int>
  great: Field<'Int!', Scalar_Int>
  good: Field<'Int!', Scalar_Int>
  bad: Field<'Int!', Scalar_Int>
  miss: Field<'Int!', Scalar_Int>
  maxCombo: Field<'Int!', Scalar_Int>
}>

type Type_RecordLevel = ObjectType<'RecordLevel', {
  id: Field<'Int!', Scalar_Int>
  version: Field<'Int!', Scalar_Int>
  uid: Field<'String!', Scalar_String>
  title: Field<'String!', Scalar_String>
  metadata: Field<'LevelMeta!', Type_LevelMeta>
  duration: Field<'Float!', Scalar_Float>
  size: Field<'FileSize!', Scalar_FileSize>
  description: Field<'String!', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  censored: Field<'String', Scalar_String>
  tags: Field<'[String!]!', undefined>
  category: Field<'[String!]!', undefined>
  owner: Field<'User', undefined>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  bundle: Field<'LevelBundle', Type_LevelBundle>
}>

type Type_ResourceMeta = ObjectType<'ResourceMeta', {
  cover: Field<'ResourceMetaProperty', undefined>
}>

type Type_ResourceMetaProperty = ObjectType<'ResourceMetaProperty', {
  name: Field<'String', Scalar_String>
  localized_name: Field<'String', Scalar_String>
  url: Field<'String', Scalar_String>
}>

type Type_User = ObjectType<'User', {
  collectionsCount: Field<'Int!', Scalar_Int>
  collections: Field<'[CollectionUserListing!]!', undefined, {
    first: Input<'Int', Scalar_Int>
  }>
  levelsCount: Field<'Int!', Scalar_Int, {
    category: Input<'String', Scalar_String>
  }>
  levels: Field<'[UserLevel!]!', undefined, {
    first: Input<'Int', Scalar_Int>
    category: Input<'String', Scalar_String>
    sort: Input<'LevelQuerySort', Enum_LevelQuerySort>
    order: Input<'QueryOrder', Enum_QueryOrder>
  }>
  id: Field<'ID!', Scalar_ID>
  uid: Field<'String', Scalar_String>
  name: Field<'String', Scalar_String>
  emails: Field<'[Email!]!', undefined>
  registrationDate: Field<'Date', Scalar_Date>
  role: Field<'Role!', Enum_Role>
  avatar: Field<'Avatar!', Type_Avatar>
  active: Field<'Boolean', Scalar_Boolean>
  lastSeen: Field<'Date', Scalar_Date>
  my: Field<'My', Type_My>
}>

type Type_UserLevel = ObjectType<'UserLevel', {
  id: Field<'Int!', Scalar_Int>
  version: Field<'Int!', Scalar_Int>
  uid: Field<'String!', Scalar_String>
  title: Field<'String!', Scalar_String>
  metadata: Field<'LevelMeta!', Type_LevelMeta>
  duration: Field<'Float!', Scalar_Float>
  size: Field<'FileSize!', Scalar_FileSize>
  description: Field<'String!', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  censored: Field<'String', Scalar_String>
  tags: Field<'[String!]!', undefined>
  category: Field<'[String!]!', undefined>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  bundle: Field<'LevelBundle', Type_LevelBundle>
  charts: Field<'[Chart!]!', undefined>
}>

type Type_UserRecord = ObjectType<'UserRecord', {
  id: Field<'Int!', Scalar_Int>
  date: Field<'Date!', Scalar_Date>
  chart: Field<'RecordChart', Type_RecordChart>
  score: Field<'Int!', Scalar_Int>
  accuracy: Field<'Float!', Scalar_Float>
  mods: Field<'[GameplayMods!]!', undefined>
  ranked: Field<'Boolean!', Scalar_Boolean>
  details: Field<'RecordDetails!', Type_RecordDetails>
  rating: Field<'Float!', Scalar_Float>
  recentRating: Field<'Float', Scalar_Float>
}>

type Type_UserStudioLevel = ObjectType<'UserStudioLevel', {
  id: Field<'Int!', Scalar_Int>
  version: Field<'Int!', Scalar_Int>
  uid: Field<'String!', Scalar_String>
  title: Field<'String!', Scalar_String>
  metadata: Field<'LevelMeta!', Type_LevelMeta>
  duration: Field<'Float!', Scalar_Float>
  size: Field<'FileSize!', Scalar_FileSize>
  description: Field<'String!', Scalar_String>
  state: Field<'ResourceState!', Enum_ResourceState>
  censored: Field<'String', Scalar_String>
  tags: Field<'[String!]!', undefined>
  category: Field<'[String!]!', undefined>
  creationDate: Field<'Date!', Scalar_Date>
  modificationDate: Field<'Date!', Scalar_Date>
  bundle: Field<'LevelBundle', Type_LevelBundle>
  charts: Field<'[Chart!]!', undefined>
  downloadCount: Field<'Float', Scalar_Float>
  playCount: Field<'Float', Scalar_Float>
  avgRating: Field<'Float', Scalar_Float>
  ratingCount: Field<'Float', Scalar_Float>
}>

export type Schema = DefineSchema<{
  Date: Scalar_Date
  FileSize: Scalar_FileSize
  Long: Scalar_Long
  Object: Scalar_Object
  Int: Scalar_Int
  Float: Scalar_Float
  String: Scalar_String
  Boolean: Scalar_Boolean
  ID: Scalar_ID
  GameplayMods: Enum_GameplayMods
  LevelQuerySort: Enum_LevelQuerySort
  PostType: Enum_PostType
  QueryOrder: Enum_QueryOrder
  RecordQuerySort: Enum_RecordQuerySort
  ResourceState: Enum_ResourceState
  Role: Enum_Role
  SearchLevelOrder: Enum_SearchLevelOrder
  SearchLevelSortingStrategy: Enum_SearchLevelSortingStrategy
  CollectionInput: Input_CollectionInput
  CollectionMetaInput: Input_CollectionMetaInput
  PartialChartMetadata: Input_PartialChartMetadata
  PartialMetadata: Input_PartialMetadata
  PostInput: Input_PostInput
  PostMetaInput: Input_PostMetaInput
  ProfileInput: Input_ProfileInput
  RecordQueryInput: Input_RecordQueryInput
  ResourceMetaInput: Input_ResourceMetaInput
  UpdateLevelInput: Input_UpdateLevelInput
  Avatar: Type_Avatar
  Badge: Type_Badge
  Chart: Type_Chart
  Collection: Type_Collection
  CollectionListing: Type_CollectionListing
  CollectionUserListing: Type_CollectionUserListing
  Comment: Type_Comment
  Email: Type_Email
  File: Type_File
  Image: Type_Image
  LeaderboardRecord: Type_LeaderboardRecord
  Level: Type_Level
  LevelBundle: Type_LevelBundle
  LevelMeta: Type_LevelMeta
  Mutation: Type_Mutation
  My: Type_My
  Post: Type_Post
  PostDetail: Type_PostDetail
  PostMeta: Type_PostMeta
  Profile: Type_Profile
  ProfileActivity: Type_ProfileActivity
  ProfileExp: Type_ProfileExp
  ProfileGrades: Type_ProfileGrades
  ProfileTimeSeries: Type_ProfileTimeSeries
  Query: Type_Query
  Rating: Type_Rating
  Record: Type_Record
  RecordChart: Type_RecordChart
  RecordDetails: Type_RecordDetails
  RecordLevel: Type_RecordLevel
  ResourceMeta: Type_ResourceMeta
  ResourceMetaProperty: Type_ResourceMetaProperty
  User: Type_User
  UserLevel: Type_UserLevel
  UserRecord: Type_UserRecord
  UserStudioLevel: Type_UserStudioLevel
}>

declare module '@gqfn/core/schema' {
  interface Schemas {
    'https://services.cytoid.io/graphql': Schema
  }
}
"
`;

exports[`@gqfn/cli > local def 1`] = `
"/* eslint-ignore */
import type { ScalarType, EnumType, InputObjectType, Input, Field, ObjectType, InterfaceType, UnionType } from '@gqfn/core/schema'

type Scalar_Date = ScalarType<'Date', unknown, unknown>
type Scalar_Int = ScalarType<'Int', number, number>
type Scalar_Float = ScalarType<'Float', number, number>
type Scalar_String = ScalarType<'String', string, string>
type Scalar_Boolean = ScalarType<'Boolean', boolean, boolean>
type Scalar_ID = ScalarType<'ID', string | number, string | number>

export type CategoryEnum =
  | 'funny'
  | 'jokes'
  | 'serious'
type Enum_CategoryEnum = EnumType<'CategoryEnum', CategoryEnum, CategoryEnum>

type Input_SayingDataInput = InputObjectType<'SayingDataInput', {
  category: Input<'CategoryEnum!', Enum_CategoryEnum>
  content: Input<'String!', Scalar_String>
}>

type Type_Mutation = ObjectType<'Mutation', {
  addSaying: Field<'Saying!', undefined, {
    input: Input<'SayingDataInput!', Input_SayingDataInput>
    ownerId: Input<'Int!', Scalar_Int>
  }>
}>

type Type_Query = ObjectType<'Query', {
  all: Field<'[Data!]!', undefined>
  allId: Field<'[ItemWithId!]!', undefined>
  hello: Field<'String!', Scalar_String, {
    name: Input<'String', Scalar_String>
  }>
  saying: Field<'Saying!', undefined, {
    id: Input<'Int!', Scalar_Int>
  }>
  sayings: Field<'[Saying!]!', undefined, {
    category: Input<'[CategoryEnum!]', undefined>
  }>
  user: Field<'User!', undefined, {
    id: Input<'Int!', Scalar_Int>
  }>
  users: Field<'[User!]!', undefined>
}>

type Type_Saying = ObjectType<'Saying', {
  category: Field<'CategoryEnum!', Enum_CategoryEnum>
  content: Field<'String!', Scalar_String>
  createdAt: Field<'Date!', Scalar_Date>
  id: Field<'Int!', Scalar_Int>
  owner: Field<'User!', undefined>
  updatedAt: Field<'Date!', Scalar_Date>
}>

type Type_Subscription = ObjectType<'Subscription', {
  countdown: Field<'Int!', Scalar_Int, {
    from: Input<'Int!', Scalar_Int>
  }>
}>

type Type_User = ObjectType<'User', {
  email: Field<'String!', Scalar_String>
  friends: Field<'[User!]!', undefined>
  id: Field<'Int!', Scalar_Int>
  name: Field<'String!', Scalar_String>
  sayings: Field<'[Saying!]!', undefined, {
    category: Input<'CategoryEnum', Enum_CategoryEnum>
  }>
}>

type Interface_ItemWithId = InterfaceType<'ItemWithId', {
  id: Field<'id', Res<'Int!'>>
}, {
  Saying: Type_Saying
  User: Type_User
}>

type Union_Data = UnionType<'Data', {
  Saying: Type_Saying
  User: Type_User
}>

export type Schema = DefineSchema<{
  Date: Scalar_Date
  Int: Scalar_Int
  Float: Scalar_Float
  String: Scalar_String
  Boolean: Scalar_Boolean
  ID: Scalar_ID
  CategoryEnum: Enum_CategoryEnum
  SayingDataInput: Input_SayingDataInput
  Mutation: Type_Mutation
  Query: Type_Query
  Saying: Type_Saying
  Subscription: Type_Subscription
  User: Type_User
  ItemWithId: Interface_ItemWithId
  Data: Union_Data
}>

declare module '@gqfn/core/schema' {
  interface Schemas {
    '/graphql': Schema
  }
}
"
`;

exports[`@gqfn/cli > star-wars sdl 1`] = `
"/* eslint-ignore */
import type { ScalarType, Field, Input, ObjectType, InterfaceType } from '@gqfn/core/schema'

type Scalar_Int = ScalarType<'Int', number, number>
type Scalar_Float = ScalarType<'Float', number, number>
type Scalar_String = ScalarType<'String', string, string>
type Scalar_Boolean = ScalarType<'Boolean', boolean, boolean>
type Scalar_ID = ScalarType<'ID', string | number, string | number>

type Type_Film = ObjectType<'Film', {
  characterConnection: Field<'FilmCharactersConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  created: Field<'String', Scalar_String>
  director: Field<'String', Scalar_String>
  edited: Field<'String', Scalar_String>
  episodeID: Field<'Int', Scalar_Int>
  id: Field<'ID!', Scalar_ID>
  openingCrawl: Field<'String', Scalar_String>
  planetConnection: Field<'FilmPlanetsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  producers: Field<'[String]', Scalar_String>
  releaseDate: Field<'String', Scalar_String>
  speciesConnection: Field<'FilmSpeciesConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  starshipConnection: Field<'FilmStarshipsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  title: Field<'String', Scalar_String>
  vehicleConnection: Field<'FilmVehiclesConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
}>

type Type_FilmCharactersConnection = ObjectType<'FilmCharactersConnection', {
  characters: Field<'[Person]', undefined>
  edges: Field<'[FilmCharactersEdge]', undefined>
  pageInfo: Field<'PageInfo!', undefined>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_FilmCharactersEdge = ObjectType<'FilmCharactersEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Person', undefined>
}>

type Type_FilmPlanetsConnection = ObjectType<'FilmPlanetsConnection', {
  edges: Field<'[FilmPlanetsEdge]', undefined>
  pageInfo: Field<'PageInfo!', undefined>
  planets: Field<'[Planet]', undefined>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_FilmPlanetsEdge = ObjectType<'FilmPlanetsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Planet', undefined>
}>

type Type_FilmSpeciesConnection = ObjectType<'FilmSpeciesConnection', {
  edges: Field<'[FilmSpeciesEdge]', undefined>
  pageInfo: Field<'PageInfo!', undefined>
  species: Field<'[Species]', undefined>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_FilmSpeciesEdge = ObjectType<'FilmSpeciesEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Species', undefined>
}>

type Type_FilmStarshipsConnection = ObjectType<'FilmStarshipsConnection', {
  edges: Field<'[FilmStarshipsEdge]', undefined>
  pageInfo: Field<'PageInfo!', undefined>
  starships: Field<'[Starship]', undefined>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_FilmStarshipsEdge = ObjectType<'FilmStarshipsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Starship', undefined>
}>

type Type_FilmVehiclesConnection = ObjectType<'FilmVehiclesConnection', {
  edges: Field<'[FilmVehiclesEdge]', undefined>
  pageInfo: Field<'PageInfo!', undefined>
  totalCount: Field<'Int', Scalar_Int>
  vehicles: Field<'[Vehicle]', undefined>
}>

type Type_FilmVehiclesEdge = ObjectType<'FilmVehiclesEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Vehicle', undefined>
}>

type Type_FilmsConnection = ObjectType<'FilmsConnection', {
  edges: Field<'[FilmsEdge]', undefined>
  films: Field<'[Film]', Type_Film>
  pageInfo: Field<'PageInfo!', undefined>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_FilmsEdge = ObjectType<'FilmsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Film', Type_Film>
}>

type Type_PageInfo = ObjectType<'PageInfo', {
  endCursor: Field<'String', Scalar_String>
  hasNextPage: Field<'Boolean!', Scalar_Boolean>
  hasPreviousPage: Field<'Boolean!', Scalar_Boolean>
  startCursor: Field<'String', Scalar_String>
}>

type Type_PeopleConnection = ObjectType<'PeopleConnection', {
  edges: Field<'[PeopleEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  people: Field<'[Person]', undefined>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_PeopleEdge = ObjectType<'PeopleEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Person', undefined>
}>

type Type_Person = ObjectType<'Person', {
  birthYear: Field<'String', Scalar_String>
  created: Field<'String', Scalar_String>
  edited: Field<'String', Scalar_String>
  eyeColor: Field<'String', Scalar_String>
  filmConnection: Field<'PersonFilmsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  gender: Field<'String', Scalar_String>
  hairColor: Field<'String', Scalar_String>
  height: Field<'Int', Scalar_Int>
  homeworld: Field<'Planet', undefined>
  id: Field<'ID!', Scalar_ID>
  mass: Field<'Float', Scalar_Float>
  name: Field<'String', Scalar_String>
  skinColor: Field<'String', Scalar_String>
  species: Field<'Species', undefined>
  starshipConnection: Field<'PersonStarshipsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  vehicleConnection: Field<'PersonVehiclesConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
}>

type Type_PersonFilmsConnection = ObjectType<'PersonFilmsConnection', {
  edges: Field<'[PersonFilmsEdge]', undefined>
  films: Field<'[Film]', Type_Film>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_PersonFilmsEdge = ObjectType<'PersonFilmsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Film', Type_Film>
}>

type Type_PersonStarshipsConnection = ObjectType<'PersonStarshipsConnection', {
  edges: Field<'[PersonStarshipsEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  starships: Field<'[Starship]', undefined>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_PersonStarshipsEdge = ObjectType<'PersonStarshipsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Starship', undefined>
}>

type Type_PersonVehiclesConnection = ObjectType<'PersonVehiclesConnection', {
  edges: Field<'[PersonVehiclesEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  totalCount: Field<'Int', Scalar_Int>
  vehicles: Field<'[Vehicle]', undefined>
}>

type Type_PersonVehiclesEdge = ObjectType<'PersonVehiclesEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Vehicle', undefined>
}>

type Type_Planet = ObjectType<'Planet', {
  climates: Field<'[String]', Scalar_String>
  created: Field<'String', Scalar_String>
  diameter: Field<'Int', Scalar_Int>
  edited: Field<'String', Scalar_String>
  filmConnection: Field<'PlanetFilmsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  gravity: Field<'String', Scalar_String>
  id: Field<'ID!', Scalar_ID>
  name: Field<'String', Scalar_String>
  orbitalPeriod: Field<'Int', Scalar_Int>
  population: Field<'Float', Scalar_Float>
  residentConnection: Field<'PlanetResidentsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  rotationPeriod: Field<'Int', Scalar_Int>
  surfaceWater: Field<'Float', Scalar_Float>
  terrains: Field<'[String]', Scalar_String>
}>

type Type_PlanetFilmsConnection = ObjectType<'PlanetFilmsConnection', {
  edges: Field<'[PlanetFilmsEdge]', undefined>
  films: Field<'[Film]', Type_Film>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_PlanetFilmsEdge = ObjectType<'PlanetFilmsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Film', Type_Film>
}>

type Type_PlanetResidentsConnection = ObjectType<'PlanetResidentsConnection', {
  edges: Field<'[PlanetResidentsEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  residents: Field<'[Person]', Type_Person>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_PlanetResidentsEdge = ObjectType<'PlanetResidentsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Person', Type_Person>
}>

type Type_PlanetsConnection = ObjectType<'PlanetsConnection', {
  edges: Field<'[PlanetsEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  planets: Field<'[Planet]', Type_Planet>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_PlanetsEdge = ObjectType<'PlanetsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Planet', Type_Planet>
}>

type Type_Root = ObjectType<'Root', {
  allFilms: Field<'FilmsConnection', Type_FilmsConnection, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  allPeople: Field<'PeopleConnection', Type_PeopleConnection, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  allPlanets: Field<'PlanetsConnection', Type_PlanetsConnection, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  allSpecies: Field<'SpeciesConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  allStarships: Field<'StarshipsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  allVehicles: Field<'VehiclesConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  film: Field<'Film', Type_Film, {
    filmID: Input<'ID', Scalar_ID>
    id: Input<'ID', Scalar_ID>
  }>
  node: Field<'Node', undefined, {
    id: Input<'ID!', Scalar_ID>
  }>
  person: Field<'Person', Type_Person, {
    id: Input<'ID', Scalar_ID>
    personID: Input<'ID', Scalar_ID>
  }>
  planet: Field<'Planet', Type_Planet, {
    id: Input<'ID', Scalar_ID>
    planetID: Input<'ID', Scalar_ID>
  }>
  species: Field<'Species', undefined, {
    id: Input<'ID', Scalar_ID>
    speciesID: Input<'ID', Scalar_ID>
  }>
  starship: Field<'Starship', undefined, {
    id: Input<'ID', Scalar_ID>
    starshipID: Input<'ID', Scalar_ID>
  }>
  vehicle: Field<'Vehicle', undefined, {
    id: Input<'ID', Scalar_ID>
    vehicleID: Input<'ID', Scalar_ID>
  }>
}>

type Type_Species = ObjectType<'Species', {
  averageHeight: Field<'Float', Scalar_Float>
  averageLifespan: Field<'Int', Scalar_Int>
  classification: Field<'String', Scalar_String>
  created: Field<'String', Scalar_String>
  designation: Field<'String', Scalar_String>
  edited: Field<'String', Scalar_String>
  eyeColors: Field<'[String]', Scalar_String>
  filmConnection: Field<'SpeciesFilmsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  hairColors: Field<'[String]', Scalar_String>
  homeworld: Field<'Planet', Type_Planet>
  id: Field<'ID!', Scalar_ID>
  language: Field<'String', Scalar_String>
  name: Field<'String', Scalar_String>
  personConnection: Field<'SpeciesPeopleConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  skinColors: Field<'[String]', Scalar_String>
}>

type Type_SpeciesConnection = ObjectType<'SpeciesConnection', {
  edges: Field<'[SpeciesEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  species: Field<'[Species]', Type_Species>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_SpeciesEdge = ObjectType<'SpeciesEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Species', Type_Species>
}>

type Type_SpeciesFilmsConnection = ObjectType<'SpeciesFilmsConnection', {
  edges: Field<'[SpeciesFilmsEdge]', undefined>
  films: Field<'[Film]', Type_Film>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_SpeciesFilmsEdge = ObjectType<'SpeciesFilmsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Film', Type_Film>
}>

type Type_SpeciesPeopleConnection = ObjectType<'SpeciesPeopleConnection', {
  edges: Field<'[SpeciesPeopleEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  people: Field<'[Person]', Type_Person>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_SpeciesPeopleEdge = ObjectType<'SpeciesPeopleEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Person', Type_Person>
}>

type Type_Starship = ObjectType<'Starship', {
  MGLT: Field<'Int', Scalar_Int>
  cargoCapacity: Field<'Float', Scalar_Float>
  consumables: Field<'String', Scalar_String>
  costInCredits: Field<'Float', Scalar_Float>
  created: Field<'String', Scalar_String>
  crew: Field<'String', Scalar_String>
  edited: Field<'String', Scalar_String>
  filmConnection: Field<'StarshipFilmsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  hyperdriveRating: Field<'Float', Scalar_Float>
  id: Field<'ID!', Scalar_ID>
  length: Field<'Float', Scalar_Float>
  manufacturers: Field<'[String]', Scalar_String>
  maxAtmospheringSpeed: Field<'Int', Scalar_Int>
  model: Field<'String', Scalar_String>
  name: Field<'String', Scalar_String>
  passengers: Field<'String', Scalar_String>
  pilotConnection: Field<'StarshipPilotsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  starshipClass: Field<'String', Scalar_String>
}>

type Type_StarshipFilmsConnection = ObjectType<'StarshipFilmsConnection', {
  edges: Field<'[StarshipFilmsEdge]', undefined>
  films: Field<'[Film]', Type_Film>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_StarshipFilmsEdge = ObjectType<'StarshipFilmsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Film', Type_Film>
}>

type Type_StarshipPilotsConnection = ObjectType<'StarshipPilotsConnection', {
  edges: Field<'[StarshipPilotsEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  pilots: Field<'[Person]', Type_Person>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_StarshipPilotsEdge = ObjectType<'StarshipPilotsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Person', Type_Person>
}>

type Type_StarshipsConnection = ObjectType<'StarshipsConnection', {
  edges: Field<'[StarshipsEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  starships: Field<'[Starship]', Type_Starship>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_StarshipsEdge = ObjectType<'StarshipsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Starship', Type_Starship>
}>

type Type_Vehicle = ObjectType<'Vehicle', {
  cargoCapacity: Field<'Float', Scalar_Float>
  consumables: Field<'String', Scalar_String>
  costInCredits: Field<'Float', Scalar_Float>
  created: Field<'String', Scalar_String>
  crew: Field<'String', Scalar_String>
  edited: Field<'String', Scalar_String>
  filmConnection: Field<'VehicleFilmsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  id: Field<'ID!', Scalar_ID>
  length: Field<'Float', Scalar_Float>
  manufacturers: Field<'[String]', Scalar_String>
  maxAtmospheringSpeed: Field<'Int', Scalar_Int>
  model: Field<'String', Scalar_String>
  name: Field<'String', Scalar_String>
  passengers: Field<'String', Scalar_String>
  pilotConnection: Field<'VehiclePilotsConnection', undefined, {
    after: Input<'String', Scalar_String>
    before: Input<'String', Scalar_String>
    first: Input<'Int', Scalar_Int>
    last: Input<'Int', Scalar_Int>
  }>
  vehicleClass: Field<'String', Scalar_String>
}>

type Type_VehicleFilmsConnection = ObjectType<'VehicleFilmsConnection', {
  edges: Field<'[VehicleFilmsEdge]', undefined>
  films: Field<'[Film]', Type_Film>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_VehicleFilmsEdge = ObjectType<'VehicleFilmsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Film', Type_Film>
}>

type Type_VehiclePilotsConnection = ObjectType<'VehiclePilotsConnection', {
  edges: Field<'[VehiclePilotsEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  pilots: Field<'[Person]', Type_Person>
  totalCount: Field<'Int', Scalar_Int>
}>

type Type_VehiclePilotsEdge = ObjectType<'VehiclePilotsEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Person', Type_Person>
}>

type Type_VehiclesConnection = ObjectType<'VehiclesConnection', {
  edges: Field<'[VehiclesEdge]', undefined>
  pageInfo: Field<'PageInfo!', Type_PageInfo>
  totalCount: Field<'Int', Scalar_Int>
  vehicles: Field<'[Vehicle]', Type_Vehicle>
}>

type Type_VehiclesEdge = ObjectType<'VehiclesEdge', {
  cursor: Field<'String!', Scalar_String>
  node: Field<'Vehicle', Type_Vehicle>
}>

type Interface_Node = InterfaceType<'Node', {
  id: Field<'id', Res<'ID!'>>
}, {
  Film: Type_Film
  Person: Type_Person
  Planet: Type_Planet
  Species: Type_Species
  Starship: Type_Starship
  Vehicle: Type_Vehicle
}>

export type Schema = DefineSchema<{
  Int: Scalar_Int
  Float: Scalar_Float
  String: Scalar_String
  Boolean: Scalar_Boolean
  ID: Scalar_ID
  Film: Type_Film
  FilmCharactersConnection: Type_FilmCharactersConnection
  FilmCharactersEdge: Type_FilmCharactersEdge
  FilmPlanetsConnection: Type_FilmPlanetsConnection
  FilmPlanetsEdge: Type_FilmPlanetsEdge
  FilmSpeciesConnection: Type_FilmSpeciesConnection
  FilmSpeciesEdge: Type_FilmSpeciesEdge
  FilmStarshipsConnection: Type_FilmStarshipsConnection
  FilmStarshipsEdge: Type_FilmStarshipsEdge
  FilmVehiclesConnection: Type_FilmVehiclesConnection
  FilmVehiclesEdge: Type_FilmVehiclesEdge
  FilmsConnection: Type_FilmsConnection
  FilmsEdge: Type_FilmsEdge
  PageInfo: Type_PageInfo
  PeopleConnection: Type_PeopleConnection
  PeopleEdge: Type_PeopleEdge
  Person: Type_Person
  PersonFilmsConnection: Type_PersonFilmsConnection
  PersonFilmsEdge: Type_PersonFilmsEdge
  PersonStarshipsConnection: Type_PersonStarshipsConnection
  PersonStarshipsEdge: Type_PersonStarshipsEdge
  PersonVehiclesConnection: Type_PersonVehiclesConnection
  PersonVehiclesEdge: Type_PersonVehiclesEdge
  Planet: Type_Planet
  PlanetFilmsConnection: Type_PlanetFilmsConnection
  PlanetFilmsEdge: Type_PlanetFilmsEdge
  PlanetResidentsConnection: Type_PlanetResidentsConnection
  PlanetResidentsEdge: Type_PlanetResidentsEdge
  PlanetsConnection: Type_PlanetsConnection
  PlanetsEdge: Type_PlanetsEdge
  Root: Type_Root
  Species: Type_Species
  SpeciesConnection: Type_SpeciesConnection
  SpeciesEdge: Type_SpeciesEdge
  SpeciesFilmsConnection: Type_SpeciesFilmsConnection
  SpeciesFilmsEdge: Type_SpeciesFilmsEdge
  SpeciesPeopleConnection: Type_SpeciesPeopleConnection
  SpeciesPeopleEdge: Type_SpeciesPeopleEdge
  Starship: Type_Starship
  StarshipFilmsConnection: Type_StarshipFilmsConnection
  StarshipFilmsEdge: Type_StarshipFilmsEdge
  StarshipPilotsConnection: Type_StarshipPilotsConnection
  StarshipPilotsEdge: Type_StarshipPilotsEdge
  StarshipsConnection: Type_StarshipsConnection
  StarshipsEdge: Type_StarshipsEdge
  Vehicle: Type_Vehicle
  VehicleFilmsConnection: Type_VehicleFilmsConnection
  VehicleFilmsEdge: Type_VehicleFilmsEdge
  VehiclePilotsConnection: Type_VehiclePilotsConnection
  VehiclePilotsEdge: Type_VehiclePilotsEdge
  VehiclesConnection: Type_VehiclesConnection
  VehiclesEdge: Type_VehiclesEdge
  Node: Interface_Node
}>

declare module '@gqfn/core/schema' {
  interface Schemas {
    'https://swapi-graphql.netlify.app/.netlify/functions/index': Schema
  }
}
"
`;
